# largitdata-wifi-pool-ui

./: CLAUDE.md  Cargo.toml  README.md  build.sh  device_phones.json
frontend/: app.js  index.html  style.css
scripts/: switch_all_devices.py  switch_phone_number.py
src/: config.rs  error.rs  events.rs  main.rs  screenshot_cache.rs
src/adb/: client.rs  types.rs
src/api/: devices.rs  events.rs  frontend.rs  mod.rs  openapi.rs  sim.rs  stream.rs
src/db/: devices.rs  migrations.rs  mod.rs  sms.rs
src/scrcpy/: mod.rs  protocol.rs  server.rs  session_manager.rs
src/sim/: manager.rs  types.rs
